Aggiunta spring-boot-starter-security e configurazione CORS aggiornata